// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Golden snapshot — full Contour pipeline > produces stable contour lines (tracingContourLines) 1`] = `
{
  "coordinatesHash": "14e852df033bdd59",
  "linesByValue": {
    "0": 1,
    "10": 12,
    "20": 8,
    "30": 1,
  },
  "totalLines": 22,
  "totalPoints": 959,
  "typeBreakdown": {
    "Border": 5,
    "Close": 17,
  },
}
`;

exports[`Golden snapshot — full Contour pipeline > produces stable isobands GeoJSON 1`] = `
{
  "coordinatesHash": "7f0f9864ad0e0c90",
  "featureCount": 23,
  "features": [
    {
      "bbox": [
        70,
        15,
        140,
        55,
      ],
      "outerRingPoints": 12293,
      "ringCount": 15,
      "value": 20,
    },
    {
      "bbox": [
        70,
        15,
        103.75005883309443,
        40.86462722806073,
      ],
      "outerRingPoints": 4088,
      "ringCount": 2,
      "value": 10,
    },
    {
      "bbox": [
        70,
        37.201182107843955,
        77.56456127215405,
        55,
      ],
      "outerRingPoints": 1779,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        70,
        46.95667776826555,
        73.2434813338919,
        50.81402280300062,
      ],
      "outerRingPoints": 486,
      "ringCount": 1,
      "value": 20,
    },
    {
      "bbox": [
        117.43295834837876,
        45.64828268317047,
        130.2636110251369,
        55,
      ],
      "outerRingPoints": 1529,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        89.76556622244065,
        15,
        140,
        43.594777189547294,
      ],
      "outerRingPoints": 5451,
      "ringCount": 3,
      "value": 30,
    },
    {
      "bbox": [
        89.41436053343459,
        44.4841935704164,
        94.6745746818869,
        50.20216504295116,
      ],
      "outerRingPoints": 921,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        80.65241771931198,
        42.37672720619088,
        88.73491568780666,
        44.644938897388776,
      ],
      "outerRingPoints": 961,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        101.3217073671912,
        24.38837149676582,
        104.77328093997272,
        27.541396232961095,
      ],
      "outerRingPoints": 641,
      "ringCount": 1,
      "value": 20,
    },
    {
      "bbox": [
        102.4066176358162,
        39.469706394969876,
        104.69931393904307,
        43.5725069665046,
      ],
      "outerRingPoints": 641,
      "ringCount": 1,
      "value": 30,
    },
    {
      "bbox": [
        90.58447818114392,
        33.66196913004321,
        94.02037785402477,
        36.058244221512666,
      ],
      "outerRingPoints": 481,
      "ringCount": 1,
      "value": 0,
    },
    {
      "bbox": [
        124.75993205090829,
        45.18050651969726,
        127.35744441360825,
        47.5511133928078,
      ],
      "outerRingPoints": 401,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        73.5313669114504,
        36.619041101275236,
        75.82425842368905,
        38.76748875151911,
      ],
      "outerRingPoints": 321,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        104.10091611784071,
        50.451656357190764,
        105.52569214820718,
        53.180613005026245,
      ],
      "outerRingPoints": 361,
      "ringCount": 1,
      "value": 30,
    },
    {
      "bbox": [
        109.21104715667855,
        42.447965980127954,
        111.2882807394009,
        44.23101638516371,
      ],
      "outerRingPoints": 321,
      "ringCount": 1,
      "value": 30,
    },
    {
      "bbox": [
        112.27025205954838,
        16.261232406648972,
        113.67961302599649,
        17.511572261370098,
      ],
      "outerRingPoints": 241,
      "ringCount": 1,
      "value": 40,
    },
    {
      "bbox": [
        105.9157305548966,
        39.985905859912556,
        106.07828733942014,
        40.60154925539616,
      ],
      "outerRingPoints": 121,
      "ringCount": 1,
      "value": 30,
    },
    {
      "bbox": [
        96.93044518471423,
        41.99400137607333,
        97.10114202307184,
        42.543745010566056,
      ],
      "outerRingPoints": 121,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        98.41204025400191,
        29.463770782336255,
        98.56167601444149,
        30.019156055936122,
      ],
      "outerRingPoints": 121,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        89.42298729707076,
        42.86485497679843,
        89.5783509234246,
        43.110651598535405,
      ],
      "outerRingPoints": 81,
      "ringCount": 1,
      "value": 30,
    },
    {
      "bbox": [
        92.98215734407678,
        43.97612508483212,
        93.11580195373867,
        44.06309729977519,
      ],
      "outerRingPoints": 81,
      "ringCount": 1,
      "value": 10,
    },
    {
      "bbox": [
        108.9674002515145,
        40.96590042153224,
        109.10817002461394,
        41.0342991559221,
      ],
      "outerRingPoints": 81,
      "ringCount": 1,
      "value": 30,
    },
    {
      "bbox": [
        100.49703911594429,
        29.94352248472002,
        100.50480337289677,
        30.01349194724114,
      ],
      "outerRingPoints": 81,
      "ringCount": 1,
      "value": 10,
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`Golden snapshot — full Contour pipeline > produces stable isolines GeoJSON 1`] = `
{
  "coordinatesHash": "4160bf7cdb42bbfa",
  "featureCount": 22,
  "features": [
    {
      "bbox": [
        90.58447818114392,
        33.66196913004321,
        94.02037785402477,
        36.058244221512666,
      ],
      "pointCount": 481,
      "value": 0,
    },
    {
      "bbox": [
        70,
        15,
        103.75005883309443,
        40.86462722806073,
      ],
      "pointCount": 4022,
      "value": 10,
    },
    {
      "bbox": [
        70,
        37.201182107843955,
        77.56456127215405,
        55,
      ],
      "pointCount": 1262,
      "value": 10,
    },
    {
      "bbox": [
        70,
        46.95667776826555,
        73.2434813338919,
        50.81402280300062,
      ],
      "pointCount": 482,
      "value": 10,
    },
    {
      "bbox": [
        117.43295834837876,
        45.64828268317047,
        130.2636110251369,
        55,
      ],
      "pointCount": 1502,
      "value": 10,
    },
    {
      "bbox": [
        98.41204025400191,
        29.463770782336255,
        98.56167601444149,
        30.019156055936122,
      ],
      "pointCount": 121,
      "value": 10,
    },
    {
      "bbox": [
        100.49703911594429,
        29.94352248472002,
        100.50480337289677,
        30.01349194724114,
      ],
      "pointCount": 81,
      "value": 10,
    },
    {
      "bbox": [
        73.5313669114504,
        36.619041101275236,
        75.82425842368905,
        38.76748875151911,
      ],
      "pointCount": 321,
      "value": 10,
    },
    {
      "bbox": [
        96.93044518471423,
        41.99400137607333,
        97.10114202307184,
        42.543745010566056,
      ],
      "pointCount": 121,
      "value": 10,
    },
    {
      "bbox": [
        80.65241771931198,
        42.37672720619088,
        88.73491568780666,
        44.644938897388776,
      ],
      "pointCount": 961,
      "value": 10,
    },
    {
      "bbox": [
        92.98215734407678,
        43.97612508483212,
        93.11580195373867,
        44.06309729977519,
      ],
      "pointCount": 81,
      "value": 10,
    },
    {
      "bbox": [
        89.41436053343459,
        44.4841935704164,
        94.6745746818869,
        50.20216504295116,
      ],
      "pointCount": 921,
      "value": 10,
    },
    {
      "bbox": [
        124.75993205090829,
        45.18050651969726,
        127.35744441360825,
        47.5511133928078,
      ],
      "pointCount": 401,
      "value": 10,
    },
    {
      "bbox": [
        89.76556622244065,
        15,
        140,
        43.594777189547294,
      ],
      "pointCount": 5322,
      "value": 20,
    },
    {
      "bbox": [
        101.3217073671912,
        24.38837149676582,
        104.77328093997272,
        27.541396232961095,
      ],
      "pointCount": 641,
      "value": 20,
    },
    {
      "bbox": [
        102.4066176358162,
        39.469706394969876,
        104.69931393904307,
        43.5725069665046,
      ],
      "pointCount": 641,
      "value": 20,
    },
    {
      "bbox": [
        105.9157305548966,
        39.985905859912556,
        106.07828733942014,
        40.60154925539616,
      ],
      "pointCount": 121,
      "value": 20,
    },
    {
      "bbox": [
        108.9674002515145,
        40.96590042153224,
        109.10817002461394,
        41.0342991559221,
      ],
      "pointCount": 81,
      "value": 20,
    },
    {
      "bbox": [
        109.21104715667855,
        42.447965980127954,
        111.2882807394009,
        44.23101638516371,
      ],
      "pointCount": 321,
      "value": 20,
    },
    {
      "bbox": [
        89.42298729707076,
        42.86485497679843,
        89.5783509234246,
        43.110651598535405,
      ],
      "pointCount": 81,
      "value": 20,
    },
    {
      "bbox": [
        104.10091611784071,
        50.451656357190764,
        105.52569214820718,
        53.180613005026245,
      ],
      "pointCount": 361,
      "value": 20,
    },
    {
      "bbox": [
        112.27025205954838,
        16.261232406648972,
        113.67961302599649,
        17.511572261370098,
      ],
      "pointCount": 241,
      "value": 30,
    },
  ],
  "type": "FeatureCollection",
}
`;

exports[`Golden snapshot — full Contour pipeline > produces stable polygons (tracingPolygons) 1`] = `
{
  "borderPolygons": 6,
  "coordinatesHash": "1919b853b0d9ddd5",
  "highCenterCount": 10,
  "polygonsWithHoles": 3,
  "totalHolePoints": 5977,
  "totalOutlinePoints": 31603,
  "totalPolygons": 23,
  "valueDistribution": {
    "0_0": 1,
    "10_10": 12,
    "10_20": 1,
    "20_20": 8,
    "30_30": 1,
  },
}
`;

exports[`Golden snapshot — full Contour pipeline > produces stable smoothed lines (smoothLines) 1`] = `
{
  "coordinatesHash": "4160bf7cdb42bbfa",
  "linesCount": 22,
  "totalPointsAfterSmoothing": 18567,
  "totalPointsBeforeSmoothing": 959,
}
`;
